<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AverageCalculatorActivity">

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFirstGradeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:text="@string/first_grade"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel" />

    <TextView
        android:id="@+id/textViewFirstGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewFirstGradeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstGradeLabel" />

    <TextView
        android:id="@+id/textViewSecondGradeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/second_grade"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFirstGradeLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewSecondGrade"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewSecondGradeLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecondGradeLabel" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNameLabel" />

    <TextView
        android:id="@+id/textViewAverageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="139dp"
        android:text="@string/average"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecondGrade" />

    <TextView
        android:id="@+id/textViewAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAverageLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewAverageLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewAverageLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>